--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dev-Burguer's.</title>
 </head>
 <body>
-    <section>
+    <nav>
         <div class="txt-logo">
             <img id="img-logo" src="./assets/img-caixa.png" alt="imagem hamburguer na caixa">
             <p id="p">Delivery 🛵</p>
@@ -17,7 +17,7 @@
             <p id="p3">Contacts</p>
             <p id="p4">Location</p>
         </div>
-    </section>
+    </nav>
             <ul> </ul>
     <div class="container-buttons">
         <button class="showing-all">ForEach</button>
