--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Dev-Burguer's.</title>
 </head>
+
 <body>
-    <nav>
+    <header>
         <div class="txt-logo">
             <img id="img-logo" src="./assets/img-caixa.png" alt="imagem hamburguer na caixa">
-            <p id="p">Delivery 🛵</p>
-            <h1 id="p1">Dev</h1>
-            <h1>Burguer's.</h1>
+            <p class="p" id="p"> Delivery 🛵</p>
+            <h1 id="p1">Dev<b>Burguer's.</b></h1>
             <p id="p2">Menu</p>
             <p id="p3">Contacts</p>
             <p id="p4">Location</p>
         </div>
-    </nav>
-            <ul> </ul>
+    </header>
+    <ul> </ul>
     <div class="container-buttons">
         <button class="showing-all">ForEach</button>
         <button class="mapping-the-items">Map</button>
@@ -28,4 +29,5 @@
 </body>
 <script src="./product.js"></script>
 <script src="./script.js"></script>
+
 </html>
